# OverLOAD

./: .gitignore  README.md  package-lock.json  package.json  vite.config.js
backend/: pyproject.toml
backend/app/: main.py
frontend/: package-lock.json
overload-supabase-pwa/: README.md  index.html  vercel.json
overload-supabase-pwa/api/: cron-compute-next-week.js
overload-supabase-pwa/src/: App.jsx  main.jsx
overload-supabase-pwa/src/components/: Help.jsx  Progress.jsx  Workout.jsx
overload-supabase-pwa/src/lib/: supabaseClient.js
overload-supabase-pwa/src/state/: auth.js
overload-supabase-pwa/supabase/schema/: schema.sql
src/components/: Planner.jsx
src/state/: store.js
src/utils/: offlineQueue.js  rp.js
supabase/functions/compute-next-week/: index.ts
supabase/functions/log-session/: index.ts
